--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
+		"prettier": "prettier --write .",
 		"preview": "vite preview"
 	},
 	"dependencies": {
@@ -25,9 +26,11 @@
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react": "^4.3.4",
 		"eslint": "^9.15.0",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.14",
 		"globals": "^15.12.0",
+		"prettier": "3.4.2",
 		"typescript": "~5.6.2",
 		"typescript-eslint": "^8.15.0",
 		"vite": "^6.0.1"
