feat: Setting husky

--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"prettier": "prettier --write .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"prepare": "husky"
 	},
 	"dependencies": {
+		"-": "^0.0.1",
 		"@reduxjs/toolkit": "^2.5.0",
 		"axios": "^1.7.9",
 		"classnames": "^2.5.1",
+		"D": "^1.0.0",
+		"husky": "^9.1.7",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-redux": "^9.2.0",
